syntax = "proto2";
package com.zheng.netty.example61;
option java_package = "com.zheng.netty.example61";
option java_outer_classname = "MessageInfo";

message MyMessage {
    
    enum DataType {
        PERSON_TYPE = 1;
        DOG_TYPE = 2;
        CAT_TYPE = 3;
    }
    
    required DataType data_type = 1;
    
    oneof Data {
        Person person = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Person {
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}

message Dog {
    optional string name = 1;
    optional int32 age = 2;
}

message Cat {
    optional string name = 1;
    optional int32 age = 2;
}